--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.event.inputs.tonosse_version }}
-        release_name: ${{ github.event.inputs.tonosse_version }}
+        tag_name: "test"
+        release_name: "test"
         draft: false
         prerelease: false
         
