--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,16 +31,13 @@ jobs:
   build_win:
 
     runs-on: windows-2019
-    env:
-      Q_SERVER_GITHUB_REPO: https://github.com/tonlabs/ton-q-server
-      Q_SERVER_GITHUB_REV: master
 
     steps:
     - uses: actions/checkout@v2
 
     - name: Clone GraphQL
       run: |
-        git clone --recursive --branch $Q_SERVER_GITHUB_REV $Q_SERVER_GITHUB_REPO ton-q-server
+        git clone --recursive --branch master https://github.com/tonlabs/ton-q-server ton-q-server
         cp tonsectl/graphql/.env ton-q-server/
 
     - name: Package GraphQL npm 
